# dotfiles

./: .gitignore  README.md
hypr/: hypridle.conf  hyprland.conf  hyprland.conf.stub-bak  keybinds.conf  monitors.conf  windowrules.conf
hypr/scripts/idle-inhibit/: Cargo.toml  README.md
hypr/scripts/idle-inhibit/src/: main.rs
noctalia/: colors.json  settings.json
