[package]
name = "idle-inhibit-fullscreen"
version = "0.1.0"
edition = "2021"
description = "Active le Keep Awake de Noctalia quand une fenêtre Hyprland passe en plein écran"

[dependencies]
serde_json = "1"

# Optimisé pour la taille : c'est un démon I/O-bound, on ne veut pas de perf CPU
# mais un binaire minimal.
[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
